--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,3 +5,19 @@ body,
     background-color: #eee;
     padding: 1em;
 }
+
+/*Messages*/
+.messages{
+    height: 440px;
+    overflow-y: scroll;
+}
+
+/*messages form*/
+.message_form{
+    position: fixed !important;
+    bottom: 1em;
+    margin-left: 320px !important;
+    left: 0;
+    right: 1em;
+    z-index: 200;
+}
